--- a/src/app/pages/manager/dialog/task-edit/task-edit.component.html
+++ b/src/app/pages/manager/dialog/task-edit/task-edit.component.html
@@ -24,8 +24,27 @@
             </div>
             <div>
                 <mat-form-field appearance="outline" class="form-field-width">
+                    <mat-label>Due date</mat-label>
+                    <input matInput [min]="minDate" [matDatepicker]="picker" formControlName="taskDueDate"
+                        [class.disabled-input]="true" readonly>
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+                <div class="error-container">
+                    <ng-container *ngIf="taskDueDate?.touched && taskDueDate?.errors?.['required']">
+                        <mat-error class="custom-error">
+                            Date is <strong>required</strong>
+                        </mat-error>
+                    </ng-container>
+                </div>
+            </div>
+        </div> <br>
+        <div class="row">
+            <div>
+                <mat-form-field appearance="outline" class="form-field-full-width">
                     <mat-label>Description</mat-label>
-                    <input matInput type="text" formControlName="taskDescription">
+                    <textarea matInput type="text" formControlName="taskDescription">
+                    </textarea>
                 </mat-form-field>
                 <div class="error-container">
                     <ng-container *ngIf="taskDescription?.touched && taskDescription?.errors?.['required']">
@@ -40,24 +59,7 @@
                     </ng-container>
                 </div>
             </div>
-        </div> <br>
-        <div class="row">
-            <div>
-                <mat-form-field appearance="outline" class="form-field-width">
-                    <mat-label>Due date</mat-label>
-                    <input matInput [min]="minDate" [matDatepicker]="picker" formControlName="taskDueDate"
-                           [class.disabled-input]="true" readonly>
-                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                  </mat-form-field>  
-                <div class="error-container">
-                    <ng-container *ngIf="taskDueDate?.touched && taskDueDate?.errors?.['required']">
-                        <mat-error class="custom-error">
-                            Date is <strong>required</strong>
-                        </mat-error>
-                    </ng-container>
-                </div>
-            </div>
+
         </div>
     </div>
     <div mat-dialog-actions class="action">
