--- a/src/app/pages/manager/employee-list/employee-list.component.html
+++ b/src/app/pages/manager/employee-list/employee-list.component.html
@@ -13,15 +13,25 @@
                 </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
-                <table mat-table [dataSource]="dataSource" class="w-100" matSort>
+                <table mat-table [dataSource]="dataSource" class="w-100" >
                     <!-- Position Column -->
                     <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                             Name
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             <ng-container>
                                 {{ element.employeeName }}
+                            </ng-container>
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="designation">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
+                            Designation
+                        </th>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            <ng-container>
+                                {{ element.designation }}
                             </ng-container>
                         </td>
                     </ng-container>
