--- a/src/app/pages/manager/dialog/manager-appoint/manager-appoint.component.html
+++ b/src/app/pages/manager/dialog/manager-appoint/manager-appoint.component.html
@@ -21,6 +21,11 @@
                             Email should have a valid format
                         </mat-error>
                     </div>
+                    <div *ngIf="email?.hasError('emailAlreadyExist')">
+                        <mat-error class="custom-error" >
+                          Email already exist
+                        </mat-error>
+                    </div>
                 </div>
             </div>
 
@@ -113,6 +118,35 @@
                         <mat-error class="custom-error">
                             Salary is <strong>required</strong>
                         </mat-error>    
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <mat-form-field appearance="outline" class="form-field-width">
+                    <mat-label>Phone</mat-label>
+                    <input matInput type="text" formControlName="phone">
+                </mat-form-field>
+                <div class="error-container">
+                    <div *ngIf="phone?.touched && phone?.errors?.['required']">
+                        <mat-error class="custom-error">
+                            Phone is <strong>required</strong>
+                        </mat-error>
+                    </div>
+                </div>
+            </div>
+
+            <div>    
+                <mat-form-field class="form-field-width" appearance="outline">
+                    <mat-label >Address</mat-label>
+                    <textarea formControlName="address" matInput placeholder="address goes here..."></textarea>
+                </mat-form-field>
+                <div class="error-container">
+                    <div *ngIf="address?.touched && address?.errors?.['required']">
+                        <mat-error class="custom-error">
+                            Address is <strong>required</strong>
+                        </mat-error>
                     </div>
                 </div>
             </div>
