--- a/src/app/pages/employee/dialog/employee-add/employee-add.component.html
+++ b/src/app/pages/employee/dialog/employee-add/employee-add.component.html
@@ -22,6 +22,11 @@
                                 Email should have a valid format
                             </mat-error>
                         </div>
+                        <div *ngIf="email?.hasError('emailAlreadyExist')">
+                            <mat-error class="custom-error" >
+                              Email already exist
+                            </mat-error>
+                        </div>
                     </div>
                 </div>
 
@@ -122,6 +127,37 @@
                 </div>
 
             </div> <br>
+
+            <div class="row">
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>Phone</mat-label>
+                        <input matInput type="text" formControlName="phone">
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="phone?.touched && phone?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Phone is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label>Designation</mat-label>
+                        <input matInput type="text" formControlName="designation">
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="designation?.touched && designation?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Designation is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                    </div>
+                </div>
+
+            </div> <br>
             <div class="row">
                 <div>
                     <mat-form-field appearance="outline" class="form-field-width">
@@ -139,6 +175,22 @@
                             </mat-error>
                         </div>
                     </div>
+                </div>
+
+                <div>       
+                    <mat-form-field appearance="outline" class="form-field-width">
+                        <mat-label >Address</mat-label>
+                        <textarea formControlName="address" matInput placeholder="address goes here..."></textarea>
+                    </mat-form-field>
+                    <div class="error-container">
+                        <div *ngIf="address?.touched && address?.errors?.['required']">
+                            <mat-error class="custom-error">
+                                Address is <strong>required</strong>
+                            </mat-error>
+                        </div>
+                       
+                    </div>
+               
                 </div>
             </div>
         </div>
