--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -28,10 +28,10 @@
                     <!-- Name Column -->
                     <ng-container matColumnDef="age">
                         <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
-                            Age
+                            Designation
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.employeeAge }}
+                            {{ element.designation }}
                         </td>
                     </ng-container>
 
