--- a/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
@@ -1,1 +1,126 @@
-<p>manager-dashboard works!</p>
+<div class="row">
+    <div class="col-lg-12">
+      <div class="row">
+        <!-- --------------------------------------------------------------------------- -->
+        <!-- Widgets -->
+        <!-- --------------------------------------------------------------------------- -->
+        <div class="col-lg-3 col-sm-4">
+          <mat-card class="cardWithShadow">
+            <mat-card-header class="d-flex align-items-center p-x-24">
+              <mat-card-title>New </mat-card-title>
+              <div class="m-l-auto">
+                <button mat-fab color="accent" class="shadow-none icon-48">
+                  <i-tabler name="notification" class="text-white d-flex"></i-tabler>
+                </button>
+              </div>
+            </mat-card-header>
+            <mat-card-content class="m-b-32 p-x-24">
+              <h4 class="mat-headline-5">{{ newTaskCount }}</h4>
+            </mat-card-content>
+           
+          </mat-card>
+        </div>
+     
+        <div class="col-lg-3 col-sm-4">
+          <mat-card class="cardWithShadow">
+            <mat-card-header class="d-flex align-items-center p-x-24">
+              <mat-card-title>InProgress</mat-card-title>
+              <div class="m-l-auto">
+                <button mat-fab color="accent" class="shadow-none icon-48">
+                  <i-tabler name="calendar-stats" class="text-white d-flex"></i-tabler>
+                </button>
+              </div>
+            </mat-card-header>
+            <mat-card-content class="m-b-32 p-x-24">
+              <h4 class="mat-headline-5">{{ inProgressCount }}</h4>
+            </mat-card-content>
+          </mat-card>
+        </div>
+  
+        <div class="col-lg-3 col-sm-4">
+          <mat-card class="cardWithShadow">
+            <mat-card-header class="d-flex align-items-center p-x-24">
+              <mat-card-title>Pending</mat-card-title>
+              <div class="m-l-auto">
+                <button mat-fab color="accent" class="shadow-none icon-48">
+                  <i-tabler name="alert-circle-filled" class="text-white d-flex"></i-tabler>
+                </button>
+              </div>
+            </mat-card-header>
+            <mat-card-content class="m-b-32 p-x-24">
+              <h4 class="mat-headline-5">{{pendingTaskCount}}</h4>
+            </mat-card-content>
+          </mat-card>
+        </div>
+  
+        <div class="col-lg-3 col-sm-4">
+          <mat-card class="cardWithShadow">
+            <mat-card-header class="d-flex align-items-center p-x-24">
+              <mat-card-title>Completed</mat-card-title>
+              <div class="m-l-auto">
+                <button mat-fab color="accent" class="shadow-none icon-48">
+                  <i-tabler name="checkbox" class="text-white d-flex"></i-tabler>
+                </button>
+              </div>
+            </mat-card-header>
+            <mat-card-content class="m-b-32 p-x-24">
+              <h4 class="mat-headline-5">{{ completedTaskCount }}</h4>
+            </mat-card-content>
+  
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  
+    <!-- --------------------------------------------------------------------------- -->
+    <!-- Sales Overview -->
+    <!-- --------------------------------------------------------------------------- -->
+    <div class="col-lg-7">
+      <mat-card class="cardWithShadow">
+        <mat-card-header>
+        <mat-card-title>Employee Details</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="p-24">
+          <div class="d-flex w-100">
+            <div class="m-l-auto">
+              
+            </div>
+          </div>
+            <div *ngIf="managerDetails">
+         
+          <mat-card>
+            <mat-card-content>
+              <p><strong>Name</strong> : {{ managerDetails.managerName }} </p>
+              <p><strong>Email</strong> : {{ managerDetails.email }} </p>
+              <p><strong>Phone</strong> : {{ managerDetails.phone }} </p>
+              <p><strong>Address</strong>  : {{ managerDetails.address }} </p>
+            </mat-card-content>
+          </mat-card>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    
+    <div class="col-lg-5">
+      <mat-card class="cardWithShadow">
+        <mat-card-content class="p-24">
+          <div class="d-flex w-100">
+            <mat-card-title>Task Analytics</mat-card-title>
+            <div class="m-l-auto">
+              
+            </div>
+          </div>
+          <ng-container *ngIf="chartOptions">
+            <apx-chart
+              [series]="chartOptions.series"
+              [chart]="chartOptions.chart"
+              [labels]="chartOptions.labels"
+              [responsive]="chartOptions.responsive"
+            ></apx-chart>
+          </ng-container>
+  
+        </mat-card-content>
+      </mat-card>
+    </div>
+    
+   
