--- a/src/app/pages/employee/task-new/task-new.component.html
+++ b/src/app/pages/employee/task-new/task-new.component.html
@@ -5,7 +5,7 @@
                 <div layout="row" layout-align="center center">
                    New Tasks
                 </div>
-                <mat-form-field>
+                <mat-form-field appearance="outline">
                     <mat-label>Filter</mat-label>
                         <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
                 </mat-form-field>
@@ -21,16 +21,17 @@
                             {{ task.taskName }}
                         </td>
                     </ng-container>
-
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="taskDescription">
+                    
+                    <ng-container matColumnDef="taskCreatedDate">
                         <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
-                            Description
+                            Created Date
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
-                            {{ task.taskDescription }}
+                            {{ task.taskCreatedDate | date }}
                         </td>
                     </ng-container>
+
+                    <!-- Name Column -->
                     <ng-container matColumnDef="taskDueDate">
                         <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
                             Due Date
@@ -48,6 +49,17 @@
                             <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
                             {{ getStatusFromNumber(task.taskStatus) }}
                         </span>
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="info">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Info</th>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            <ng-container>
+                                <button mat-icon-button color="primary" (click)="OpenTaskDescription(element.taskDescription)">
+                                    <mat-icon>info</mat-icon>
+                                </button>
+                            </ng-container>
                         </td>
                     </ng-container>
 
