--- a/src/app/pages/employee/task-pending/task-pending.component.html
+++ b/src/app/pages/employee/task-pending/task-pending.component.html
@@ -23,14 +23,15 @@
                     </ng-container>
 
                     <!-- Name Column -->
-                    <ng-container matColumnDef="taskDescription">
+                    <ng-container matColumnDef="taskCreatedDate">
                         <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
-                            Description
+                            Created Date
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
-                            {{ task.taskDescription }}
+                            {{ task.taskCreatedDate | date }}
                         </td>
                     </ng-container>
+                
                     <ng-container matColumnDef="taskDueDate">
                         <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
                             Due Date
@@ -48,6 +49,17 @@
                             <span class="bg-light-error text-error rounded f-w-600 p-6 p-y-4 f-s-12">
                             {{ getStatusFromNumber(task.taskStatus) }}
                         </span>
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="info">
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Info</th>
+                        <td mat-cell *matCellDef="let element" class="mat-body-1">
+                            <ng-container>
+                                <button mat-icon-button color="primary" (click)="OpenTaskDescription(element.taskDescription)">
+                                    <mat-icon>info</mat-icon>
+                                </button>
+                            </ng-container>
                         </td>
                     </ng-container>
 
