Confirm Logout and 404 page

--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,9 +1,6 @@
 <div id="notfound">
-    <div class="notfound">
-        <div class="notfound-404">
-            <h1>Oops!</h1>
-            <h2>404 - The Page can't be found</h2>
-        </div>
-        <a href="#">Go TO Homepage</a>
-    </div>
+<div class="notfound">
+    <img src="/assets/images/backgrounds/404-page-not-found.svg" alt="Page Not Found" >
+    <a href="#">GO TO HOMEPAGE</a>
+</div>
 </div>
