--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -39,13 +39,8 @@
       <mat-icon class="d-flex align-items-center"><i-tabler name="mail" class="icon-18 d-flex"></i-tabler></mat-icon>My
       Account
     </button>
-    <button mat-menu-item>
-      <mat-icon class="d-flex align-items-center"><i-tabler name="list-check"
-          class="icon-18 d-flex"></i-tabler></mat-icon>My Task
-    </button>
-
     <div class="p-x-12 m-t-12">
-      <a [routerLink]="'/authentication/login'" mat-stroked-button color="primary" class="w-100" (click)="onLogoutHandle()">Logout</a>
+      <button mat-stroked-button color="primary" class="w-100" (click)="onLogoutHandle()">Logout</button>
     </div>
   </mat-menu>
 </mat-toolbar>
