--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 
 <div class="loader-overlay" *ngIf="(loaderService.isLoading | async)">
-    <mat-spinner></mat-spinner>
+    <div class="spinner">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+
+
 </div>
   
 <router-outlet></router-outlet>
