--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -1,85 +1,146 @@
 <div class="col-lg-12">
-    <mat-card class="cardWithShadow">
-        <mat-card-content class="p-24">
-            <mat-card-title class="title-flex-container">
-                <div layout="row" layout-align="center center  ">
-                  Employees
-                </div>
-                <div fxLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center">
-                  <mat-form-field appearance="outline">
-                    <mat-label>Filter</mat-label>
-                    <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
-                  </mat-form-field>
-                  <button mat-raised-button class="create-btn" color="primary" (click)="OpenAddEmployee()">Create</button>
-                </div>
-              </mat-card-title>
-            <div class="table-responsive m-t-16">
-                <table  mat-table [dataSource]="dataSource" class="w-100" matSort>
-                    <!-- Position Column -->
-                    <ng-container matColumnDef="name">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
-                            Name
-                        </th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.employeeName }}
-                        </td>
-                    </ng-container>
+  <mat-card class="cardWithShadow">
+    <mat-card-content class="p-24">
+      <mat-card-title class="title-flex-container">
+        <div layout="row" layout-align="center center  ">Employees</div>
+        <div
+          fxLayout="row"
+          fxLayoutAlign="start center"
+          fxLayout.lt-md="column"
+          fxLayoutAlign.lt-md="center center"
+        >
+          <mat-form-field appearance="outline">
+            <mat-label>Filter</mat-label>
+            <input
+              matInput
+              (keyup)="applyFilter($event)"
+              placeholder="Search columns"
+              #input
+            />
+          </mat-form-field>
+          <button
+            mat-raised-button
+            class="create-btn"
+            color="primary"
+            (click)="OpenAddEmployee()"
+          >
+            Create
+          </button>
+        </div>
+      </mat-card-title>
+      <div class="table-responsive m-t-16">
+        <table mat-table [dataSource]="dataSource" class="w-100" matSort>
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              class="f-w-600 mat-subtitle-1 f-s-14"
+            >
+              Name
+            </th>
+            <td mat-cell *matCellDef="let element" class="mat-body-1">
+              {{ element.employeeName }}
+            </td>
+          </ng-container>
 
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="age">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
-                            Designation
-                        </th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.designation }}
-                        </td>
-                    </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="age">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              class="f-w-600 mat-subtitle-1 f-s-14"
+            >
+              Designation
+            </th>
+            <td mat-cell *matCellDef="let element" class="mat-body-1">
+              {{ element.designation }}
+            </td>
+          </ng-container>
 
-                    <!-- Weight Column -->
-                    <ng-container matColumnDef="manager">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
-                            Manager
-                        </th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <strong>{{ element.managerIsAppointed ? element.managerName : 'Not Appointed' }}</strong>
-                        </td>
-                    </ng-container>
+          <!-- Weight Column -->
+          <ng-container matColumnDef="manager">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              class="f-w-600 mat-subtitle-1 f-s-14"
+            >
+              Manager
+            </th>
+            <td mat-cell *matCellDef="let element" class="mat-body-1">
+              <strong>{{
+                element.managerIsAppointed
+                  ? element.managerName
+                  : "Not Appointed"
+              }}</strong>
+            </td>
+          </ng-container>
 
-                    <!-- Symbol Column -->
-                    <ng-container matColumnDef="department">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
-                            Department
-                        </th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.departmentName }}
-                        </td>
-                    </ng-container>
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="department">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              class="f-w-600 mat-subtitle-1 f-s-14"
+            >
+              Department
+            </th>
+            <td mat-cell *matCellDef="let element" class="mat-body-1">
+              {{ element.departmentName }}
+            </td>
+          </ng-container>
 
-                    <!-- Action Column -->
-                    <ng-container matColumnDef="edit">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="primary" (click)="OpenEditEmployee(element)">
-                                <mat-icon>edit</mat-icon>
-                            </button>
-                        </td>
-                    </ng-container>
+          <!-- Action Column -->
+          <ng-container matColumnDef="edit">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              class="f-w-600 mat-subtitle-1 f-s-14"
+            >
+              Edit
+            </th>
+            <td mat-cell *matCellDef="let element" class="mat-body-1">
+              <button
+                mat-icon-button
+                color="primary"
+                (click)="OpenEditEmployee(element)"
+              >
+                <mat-icon>edit</mat-icon>
+              </button>
+            </td>
+          </ng-container>
 
-                    <ng-container matColumnDef="delete">
-                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Delete</th>
-                        <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="warn" (click)="DeleteEmployee(element.employeeID)">
-                                <mat-icon>delete</mat-icon>
-                            </button>
-                        </td>
-                    </ng-container>
+          <ng-container matColumnDef="delete">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              class="f-w-600 mat-subtitle-1 f-s-14"
+            >
+              Delete
+            </th>
+            <td mat-cell *matCellDef="let element" class="mat-body-1">
+              <button
+                mat-icon-button
+                color="warn"
+                (click)="DeleteEmployee(element.employeeID)"
+              >
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                </table>
-            </div>
-        </mat-card-content>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" > </mat-paginator>
-    </mat-card>
-
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+      </div>
+    </mat-card-content>
+    <mat-paginator
+    [length]="totalItems"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="[pageSize]"
+    [pageIndex]="pageNumber - 1"
+    (page)="onPageChange($event)"
+  >
+  </mat-paginator>
+  </mat-card>
 </div>
