added filter boxstyling

--- a/src/app/pages/employee/task-completed/task-completed/task-completed.component.html
+++ b/src/app/pages/employee/task-completed/task-completed/task-completed.component.html
@@ -5,7 +5,7 @@
                 <div layout="row" layout-align="center center">
                    Completed Tasks
                 </div>
-                <mat-form-field>
+                <mat-form-field appearance="outline">
                     <mat-label>Filter</mat-label>
                         <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
                 </mat-form-field>
