--- a/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
@@ -78,7 +78,7 @@
     <div class="col-lg-7">
       <mat-card class="cardWithShadow">
         <mat-card-header>
-        <mat-card-title>Employee Details</mat-card-title>
+        <mat-card-title>Manager Details</mat-card-title>
         </mat-card-header>
         <mat-card-content class="p-24">
           <div class="d-flex w-100">
