--- a/src/app/pages/employee/dialog/employee-edit/employee-edit.component.html
+++ b/src/app/pages/employee/dialog/employee-edit/employee-edit.component.html
@@ -17,7 +17,7 @@
                     </div>
                     <div *ngIf="employeeName?.errors?.['pattern']">
                         <mat-error class="custom-error">
-                            Name should have at least 6 characters and no spaces allowed.
+                            Username should have at least 4 characters.
                         </mat-error>
                     </div>
                 </div>
@@ -77,33 +77,21 @@
             <div>
                 <mat-form-field appearance="outline" class="form-field-width">
                     <mat-label>Phone</mat-label>
-                    <input matInput type="number" formControlName="phone">
-                </mat-form-field>
+                    <input matInput type="string" formControlName="phone">
+                </mat-form-field>   
                 <div class="error-container">
                     <div *ngIf="phone?.touched && phone?.errors?.['required']">
                         <mat-error class="custom-error">
                             phone is <strong>required</strong>
                         </mat-error>
                     </div>
-                </div>
-            </div>
-            <!-- <div>
-                <mat-form-field appearance="outline" class="form-field-width">
-                    <mat-label>Department</mat-label>
-                        <mat-select formControlName="managerID">
-                            <mat-option *ngFor="let department of departments" [value]="department.managerId">
-                                {{ department.departmentName }}
-                            </mat-option>
-                        </mat-select>
-                </mat-form-field>
-                <div class="error-container">
-                    <div *ngIf="managerID?.touched && managerID?.errors?.['required']">
+                    <div *ngIf="phone?.errors?.['pattern']">
                         <mat-error class="custom-error">
-                            managerID is <strong>required</strong>
+                         Invalid phone number
                         </mat-error>
                     </div>
                 </div>
-            </div>             -->
+            </div>
 
             <div>
                 <mat-form-field appearance="outline" class="form-field-width">
