--- a/src/app/pages/manager/dialog/manager-appoint/manager-appoint.component.html
+++ b/src/app/pages/manager/dialog/manager-appoint/manager-appoint.component.html
@@ -83,7 +83,7 @@
                     </div>
                     <div *ngIf="managerName?.errors?.['pattern']">
                         <mat-error class="custom-error">
-                            Username should have at least 6 characters and no spaces allowed.
+                            Username should have at least 4 characters.
                         </mat-error>
                     </div>
                 </div>
@@ -132,6 +132,11 @@
                     <div *ngIf="phone?.touched && phone?.errors?.['required']">
                         <mat-error class="custom-error">
                             Phone is <strong>required</strong>
+                        </mat-error>
+                    </div>
+                    <div *ngIf="phone?.touched && phone?.errors?.['pattern']">
+                        <mat-error class="custom-error">
+                         Invalid phone number
                         </mat-error>
                     </div>
                 </div>
