--- a/src/app/pages/manager/manager.component.html
+++ b/src/app/pages/manager/manager.component.html
@@ -14,10 +14,10 @@
                 </div>
             </mat-card-title>
             <div class="table-responsive m-t-16">
-                <table  mat-table [dataSource]="dataSource" class="w-100" matSort>
+                <table  mat-table [dataSource]="dataSource" class="w-100">
                     <!-- Position Column -->
                     <ng-container matColumnDef="name">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14"  >
                             Name
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -32,7 +32,7 @@
 
                     <!-- Name Column -->
                     <ng-container matColumnDef="age">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14"  >
                             Age
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -44,7 +44,7 @@
 
                     <!-- Weight Column -->
                     <ng-container matColumnDef="salary">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
                             Salary
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
@@ -68,7 +68,7 @@
                     
 
                     <ng-container matColumnDef="department">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
+                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
                             department
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
