auth submit invalid

--- a/src/app/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/pages/authentication/forgot-password/forgot-password.component.html
@@ -39,7 +39,7 @@
                   <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner> 
               </button> -->
 
-              <button type="submit" mat-flat-button class="w-100" color="primary">
+              <button type="submit" mat-flat-button class="w-100" color="primary" [disabled]="!forgotPasswordForm.valid">
                 <span>Send OTP</span>
               <!-- <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner> -->
              </button>
