--- a/src/app/pages/manager/employee-task/employee-task.component.html
+++ b/src/app/pages/manager/employee-task/employee-task.component.html
@@ -11,42 +11,42 @@
                     <div class="data-item">
                         <strong>Name:</strong>
                     </div>
-                    <div class="data-item">{{ employeeDetails.employeeName }}</div>
+                    <div class="data-item">{{ employeeDetails?.employeeName }}</div>
                     <mat-divider></mat-divider>
                 </div>
                 <div>
                     <div class="data-item">
                         <strong>Designation:</strong>
                     </div>
-                    <div class="data-item">{{ employeeDetails.designation }}</div>
+                    <div class="data-item">{{ employeeDetails?.designation }}</div>
                     <mat-divider></mat-divider>
                 </div>
                 <div>
                     <div class="data-item">
                         <strong>Phone:</strong>
                     </div>
-                    <div class="data-item">{{ employeeDetails.phone }}</div>
+                    <div class="data-item">{{ employeeDetails?.phone }}</div>
                     <mat-divider></mat-divider>
                 </div>
                 <div>
                     <div class="data-item">
                         <strong>Email:</strong>
                     </div>
-                    <div class="data-item">{{ employeeDetails.email }}</div>
+                    <div class="data-item">{{ employeeDetails?.email }}</div>
                     <mat-divider></mat-divider>
                 </div>
                 <div>
                     <div class="data-item">
                         <strong>Address:</strong>
                     </div>
-                    <div class="data-item">{{ employeeDetails.address }}</div>
+                    <div class="data-item">{{ employeeDetails?.address }}</div>
                     <mat-divider></mat-divider>
                 </div>
                 <div>
                     <div class="data-item">
                         <strong>Age:</strong>
                     </div>
-                    <div class="data-item">{{ employeeDetails.employeeAge }}</div>
+                    <div class="data-item">{{ employeeDetails?.employeeAge }}</div>
                     <mat-divider></mat-divider>
                 </div>
             </mat-card-content>
