--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -66,7 +66,7 @@
             </div>
 
 
-            <button mat-flat-button color="primary" class="w-100" type="submit">Sign In</button>
+            <button mat-flat-button color="primary" class="w-100" type="submit" [disabled]="!loginForm.valid">Sign In</button>
           </form>
           <span class="d-block f-w-500 text-right m-t-10">
             <a [routerLink]="['/authentication/forgot-password']" class="text-decoration-none text-primary f-w-500 f-s-14 m-t-30">
