--- a/src/app/pages/department/department-details/department-details.component.html
+++ b/src/app/pages/department/department-details/department-details.component.html
@@ -27,32 +27,32 @@
                     </ng-container>
 
                     <!-- Name Column -->
-                    <ng-container matColumnDef="age">
+                    <ng-container matColumnDef="designation">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-                            Age
+                            Designation
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.employeeAge }}
+                            {{ element.designation }}
                         </td>
                     </ng-container>
 
                     <!-- Weight Column -->
-                    <ng-container matColumnDef="salary">
+                    <ng-container matColumnDef="email">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-                            Salary
+                            Email
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ element.employeeSalary }}
+                            {{ element.email }}
                         </td>
                     </ng-container>
 
                     <!-- Symbol Column -->
-                    <ng-container matColumnDef="department">
+                    <ng-container matColumnDef="phone">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-                            Department
+                            Phone
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            {{ EmployeesAndManagerDetails?.departmentName }}
+                            {{ element.phone }}
                         </td>
                     </ng-container>
 
