--- a/src/app/pages/department/department.component.html
+++ b/src/app/pages/department/department.component.html
@@ -31,7 +31,7 @@
                     <ng-container matColumnDef="edit">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Edit</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
-                            <button mat-icon-button color="primary" (click)="OpenEditDepartment(element)">
+                            <button mat-icon-button color="primary" (click)="OpenEditDepartment(element)" (click)="$event.stopPropagation()">
                                 <mat-icon>edit</mat-icon>
                             </button>
                         </td>
