--- a/src/app/pages/employee/dialog/employee-add/employee-add.component.html
+++ b/src/app/pages/employee/dialog/employee-add/employee-add.component.html
@@ -201,7 +201,7 @@
         </div>
         <div mat-dialog-actions class="action">
             <button mat-raised-button type="button" [mat-dialog-close]="false">Cancel</button>
-            <button mat-raised-button color="primary" type="submit">Create</button>
+            <button mat-raised-button color="primary" type="submit" [disabled]="!employeeForm.valid" >Create</button>
         </div>
     </form>
 </div>
