--- a/src/app/pages/manager/dialog/manager-edit/manager-edit.component.html
+++ b/src/app/pages/manager/dialog/manager-edit/manager-edit.component.html
@@ -99,6 +99,6 @@
     <button mat-raised-button type="button" [mat-dialog-close]="false">
       Cancel
     </button>
-    <button mat-raised-button color="primary" type="submit">Update</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!managerForm.valid">Update</button>
   </div>
 </form>
