--- a/src/app/pages/manager/employee-task/employee-task.component.html
+++ b/src/app/pages/manager/employee-task/employee-task.component.html
@@ -90,7 +90,32 @@
                             </th>
                             <td mat-cell *matCellDef="let element" class="mat-body-1">
                                 <ng-container>
-                                    {{ GetStatusFromNumber(element.taskStatus) }}
+                                    <div [ngSwitch]="element.taskStatus">
+                                        <div *ngSwitchCase="1">
+                                            <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
+                                                {{ GetStatusFromNumber(element.taskStatus) }}
+                                            </span>
+                                        </div>
+                                        <div *ngSwitchCase="2">
+                                            <span class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12">
+                                                {{ GetStatusFromNumber(element.taskStatus) }}
+                                            </span>
+                                        </div>
+                                        <div *ngSwitchCase="3">
+                                            <span class="bg-light-success text-success rounded f-w-600 p-6 p-y-4 f-s-12">
+                                                {{ GetStatusFromNumber(element.taskStatus) }}
+                                            </span>
+                                        </div>
+                                        <div *ngSwitchCase="4">
+                                            <span class="bg-light-error text-error rounded f-w-600 p-6 p-y-4 f-s-12">
+                                                {{ GetStatusFromNumber(element.taskStatus) }}
+                                            </span>
+                                        </div>
+                                        <div *ngSwitchDefault>
+                                            <p>{{GetStatusFromNumber(element.taskStatus)}}</p>
+                                        </div>
+                                    </div>
+
                                 </ng-container>
                             </td>
                         </ng-container>
