--- a/src/app/pages/manager/manager.component.html
+++ b/src/app/pages/manager/manager.component.html
@@ -69,7 +69,7 @@
 
                     <ng-container matColumnDef="department">
                         <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" >
-                            department
+                            Department
                         </th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             {{ element.departmentName }}
