admin dashboard changes

--- a/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="row">
+
       <!-- --------------------------------------------------------------------------- -->
-      <!-- Widgets -->
+      <!-- Admin Widgets -->
       <!-- --------------------------------------------------------------------------- -->
   
       <div class="col-lg-6 col-sm-4">
@@ -39,6 +40,12 @@
       </div>
     </div>
   </div>
+
+
+    <!-- --------------------------------------------------------------------------- -->
+    <!-- Admin Charts -->
+    <!-- --------------------------------------------------------------------------- -->
+  
 
   <div class="col-lg-12">
     <mat-card class="cardWithShadow">
