--- a/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="row">
     <div class="col-lg-12">
+      
+      <h3>Welcome {{managerDetails.departmentName | uppercase}}  Manager! </h3>
       <div class="row">
         <!-- --------------------------------------------------------------------------- -->
         <!-- Widgets -->
@@ -7,32 +9,37 @@
         <div class="col-lg-3 col-sm-4">
           <mat-card class="cardWithShadow">
             <mat-card-header class="d-flex align-items-center p-x-24">
-              <mat-card-title>New </mat-card-title>
+              <mat-card-title>Total New </mat-card-title>
               <div class="m-l-auto">
                 <button mat-fab color="accent" class="shadow-none icon-48">
                   <i-tabler name="notification" class="text-white d-flex"></i-tabler>
                 </button>
               </div>
             </mat-card-header>
-            <mat-card-content class="m-b-32 p-x-24">
+            <mat-card-content class="m-b-8 p-x-24">
               <h4 class="mat-headline-5">{{ newTaskCount }}</h4>
             </mat-card-content>
-           
+            <mat-card-content class="m-b-10 p-x-24">
+              <mat-card-title>Tasks </mat-card-title>
+            </mat-card-content>
           </mat-card>
         </div>
      
         <div class="col-lg-3 col-sm-4">
           <mat-card class="cardWithShadow">
             <mat-card-header class="d-flex align-items-center p-x-24">
-              <mat-card-title>InProgress</mat-card-title>
+              <mat-card-title>Total InProgress</mat-card-title>
               <div class="m-l-auto">
                 <button mat-fab color="accent" class="shadow-none icon-48">
                   <i-tabler name="calendar-stats" class="text-white d-flex"></i-tabler>
                 </button>
               </div>
             </mat-card-header>
-            <mat-card-content class="m-b-32 p-x-24">
+            <mat-card-content class="m-b-8 p-x-24">
               <h4 class="mat-headline-5">{{ inProgressCount }}</h4>
+            </mat-card-content>
+            <mat-card-content class="m-b-10 p-x-24">
+              <mat-card-title>Tasks </mat-card-title>
             </mat-card-content>
           </mat-card>
         </div>
@@ -40,15 +47,18 @@
         <div class="col-lg-3 col-sm-4">
           <mat-card class="cardWithShadow">
             <mat-card-header class="d-flex align-items-center p-x-24">
-              <mat-card-title>Pending</mat-card-title>
+              <mat-card-title>Total Pending</mat-card-title>
               <div class="m-l-auto">
                 <button mat-fab color="accent" class="shadow-none icon-48">
                   <i-tabler name="alert-circle-filled" class="text-white d-flex"></i-tabler>
                 </button>
               </div>
             </mat-card-header>
-            <mat-card-content class="m-b-32 p-x-24">
+            <mat-card-content class="m-b-8 p-x-24">
               <h4 class="mat-headline-5">{{pendingTaskCount}}</h4>
+            </mat-card-content>
+            <mat-card-content class="m-b-10 p-x-24">
+              <mat-card-title>Tasks </mat-card-title>
             </mat-card-content>
           </mat-card>
         </div>
@@ -56,17 +66,19 @@
         <div class="col-lg-3 col-sm-4">
           <mat-card class="cardWithShadow">
             <mat-card-header class="d-flex align-items-center p-x-24">
-              <mat-card-title>Completed</mat-card-title>
+              <mat-card-title>Total Completed</mat-card-title>
               <div class="m-l-auto">
                 <button mat-fab color="accent" class="shadow-none icon-48">
                   <i-tabler name="checkbox" class="text-white d-flex"></i-tabler>
                 </button>
               </div>
             </mat-card-header>
-            <mat-card-content class="m-b-32 p-x-24">
+            <mat-card-content class="m-b-8 p-x-24">
               <h4 class="mat-headline-5">{{ completedTaskCount }}</h4>
             </mat-card-content>
-  
+            <mat-card-content class="m-b-10 p-x-24">
+              <mat-card-title>Tasks </mat-card-title>
+            </mat-card-content>
           </mat-card>
         </div>
       </div>
@@ -94,6 +106,7 @@
               <p><strong>Email</strong> : {{ managerDetails.email }} </p>
               <p><strong>Phone</strong> : {{ managerDetails.phone }} </p>
               <p><strong>Address</strong>  : {{ managerDetails.address }} </p>
+              <p><strong>Department</strong>  : {{ managerDetails.departmentName | uppercase }} </p>
             </mat-card-content>
           </mat-card>
           </div>
@@ -105,7 +118,7 @@
       <mat-card class="cardWithShadow">
         <mat-card-content class="p-24">
           <div class="d-flex w-100">
-            <mat-card-title>Task Analytics</mat-card-title>
+            <mat-card-title>Employees Task Summary</mat-card-title>
             <div class="m-l-auto">
               
             </div>
