--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -31,16 +31,8 @@
     <img src="/assets/images/profile/user-1.jpg" class="rounded-circle object-cover" width="35" />
   </button>
   <mat-menu #profilemenu="matMenu" class="topbar-dd cardWithShadow">
-    <button mat-menu-item>
-      <mat-icon class="d-flex align-items-center"><i-tabler name="user" class="icon-18 d-flex"></i-tabler></mat-icon>My
-      Profile
-    </button>
-    <button mat-menu-item>
-      <mat-icon class="d-flex align-items-center"><i-tabler name="mail" class="icon-18 d-flex"></i-tabler></mat-icon>My
-      Account
-    </button>
     <div class="p-x-12 m-t-12">
-      <button mat-stroked-button color="primary" class="w-100" (click)="onLogoutHandle()">Logout</button>
+      <button mat-stroked-button style="background-color: red; color: white;" class="w-100" (click)="onLogoutHandle()">Logout</button>
     </div>
   </mat-menu>
 </mat-toolbar>
