--- a/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-lg-12">
+    <h3>Welcome Admin!</h3>
     <div class="row">
       <!-- --------------------------------------------------------------------------- -->
       <!-- Widgets -->
       <!-- --------------------------------------------------------------------------- -->
-  
       <div class="col-lg-6 col-sm-4">
         <mat-card class="cardWithShadow">
           <mat-card-header class="d-flex align-items-center p-x-24">
-            <mat-card-title>Employees</mat-card-title>
+            <mat-card-title>Total Employees</mat-card-title>
             <div class="m-l-auto">
               <button mat-fab color="accent" class="shadow-none icon-48">
                 <i-tabler name="users" class="text-white d-flex"></i-tabler>
@@ -24,7 +24,7 @@
       <div class="col-lg-6 col-sm-4">
         <mat-card class="cardWithShadow">
           <mat-card-header class="d-flex align-items-center p-x-24">
-            <mat-card-title>Departments</mat-card-title>
+            <mat-card-title>Total Departments</mat-card-title>
             <div class="m-l-auto">
               <button mat-fab color="accent" class="shadow-none icon-48">
                 <i-tabler name="briefcase" class="text-white d-flex"></i-tabler>
