--- a/src/app/pages/manager/employee-list/employee-list.component.html
+++ b/src/app/pages/manager/employee-list/employee-list.component.html
@@ -4,8 +4,11 @@
             <mat-card-title class="title-flex-container">
                 <div layout="row" layout-align="center center">
                     Employees
+                    <p class="f-s-14" style="color:gray">Employees under <strong>{{managerName}}</strong></p>
+                      
                 </div>
                 <div>
+                    
                     <mat-form-field appearance="outline">
                         <mat-label>Filter</mat-label>
                         <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
@@ -14,6 +17,8 @@
             </mat-card-title>
             <div class="table-responsive m-t-16">
                 <table mat-table [dataSource]="dataSource" class="w-100" >
+
+
                     <!-- Position Column -->
                     <ng-container matColumnDef="name">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
